samples/_failures_safe/1761082639_a3e0ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5c1158d.c: In function ‘main’:
./samples/SAFE/__tmp_b5c1158d.c:157:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  157 |     for (int i
      |     ^~~
./samples/SAFE/__tmp_b5c1158d.c:157:5: error: expected declaration or statement at end of input
